@@ -2,8 +2,9 @@ powernap (1.13) unreleased; urgency=low
 
   * powernap/monitors: Re-work Monitors to integrate them with PowerNap.
   * powernap/powernap.py: Minor fixes to not crash when loading monitors.
+  * sbin/powernapd: Integrate Monitors approach to work with Daemon.
 
- -- Andres Rodriguez <andreserl@ubuntu.com>  Tue, 18 Jan 2011 09:43:48 -0500
+ -- Andres Rodriguez <andreserl@ubuntu.com>  Tue, 18 Jan 2011 17:13:26 -0500
 
 powernap (1.12-0ubuntu1) natty; urgency=low
 
